Cleaned up a lot of code, removing warnings etc.